fix: dark mode

--- a/src/ui/component/Popup/index.less
+++ b/src/ui/component/Popup/index.less
@@ -23,7 +23,7 @@
 
   &.is-new {
     .ant-drawer-content {
-      background-color: var(--r-neutral-bg-2, #F2F4F7);
+      background: var(--r-neutral-bg2, #F2F4F7);
     }
   }
 
@@ -46,7 +46,14 @@
     }
   }
   .popup-input {
-    border-radius: 6px;
+    border-radius: 8px;
+
+    input {
+      border-radius: 0;
+      &::placeholder {
+        color: var(--r-neutral-foot, #6a7587);
+        }
+    }
   }
   .popup-footer {
     position: absolute;
@@ -82,7 +89,7 @@
 
   &.is-new {
     .ant-drawer-content {
-      background: var(--r-neutral-bg-2, #3D4251);
+      background: var(--r-neutral-bg2, #F2F4F7);
     }
   }
 
@@ -105,10 +112,15 @@
       background: var(--r-neutral-card-2, #F2F4F7) !important;
     }
   }
-  
 
+  .ant-form-item-has-error {
+    .ant-input-affix-wrapper {
+      border-color: var(--r-red-default, #FF4D4F) !important;
+    }
+  }
+  
   .ant-input-affix-wrapper {
-    border-width: 0.5px;
+    border-width: 1px;
     &.ant-input-affix-wrapper-focused {
       border-width: 1px;
       border-color: var(--r-blue-default, #7084ff);
